# evently

./: .gitignore  LICENSE  README.md  docker-compose.yml  tsconfig.base.json
configs/: init.sql
configs/rabbit/: Dockerfile
events-manager/: .env.template  dockerfile  go.mod  go.sum  setEnvs.sh
events-manager/cmd/server/: BUILD.bazel  main.go  wire.go  wire_gen.go
events-manager/components/events/settings/: BUILD.bazel  settings.go
events-manager/domain/broker/: publisher_repository.go
events-manager/domain/broker/mocks/: BrokerPublisher.go
events-manager/domain/broker/models/: message.go
events-manager/domain/dtos/: BUILD.bazel
events-manager/domain/events/: broker_types.go
events-manager/domain/events/dtos/: add_attendee.go
events-manager/domain/events/models/: event.go  publisher_types.go  types.go
events-manager/domain/events/repositories/: events_repository.go
events-manager/domain/repositories/: BUILD.bazel  events_repository.go
events-manager/domain/usecases/: BUILD.bazel  get_events.go
events-manager/infrastructure/app/: BUILD.bazel  app.go  settings.go
events-manager/infrastructure/app/domain/: BUILD.bazel  consts.go
events-manager/infrastructure/events/: event.go  mappers.go  postgre.go  settings.go  setup.go
events-manager/infrastructure/http/handlers/health/: BUILD.bazel  dtos.go  handlers.go  routes.go
events-manager/infrastructure/postgre_db/: BUILD.bazel  postgre_repository.go  settings.go
events-manager/infrastructure/postgre_db/adapters/: BUILD.bazel  postgre.go
events-manager/infrastructure/rabbit/: BUILD.bazel  client.go  publisher.go  settings.go
events-manager/infrastructure/rabbit/mappers/: messages.go
events-manager/infrastructure/users/: settings.go  setup.go
events-manager/pkgs/errors/: BUILD.bazel  checker.go
events-manager/pkgs/logger/: BUILD.bazel  logger.go
events-manager/pkgs/validators/: arguments.go
front/: BAZEL.build  Dockerfile  angular.json  dockerfile  package.json  pnpm-lock.yaml
front/src/: custom-theme.scss  index.html  styles.scss
front/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
front/src/environments/: environment.development.ts  environment.ts
notifier/: .air.toml  .env.template  dockerfile  go.mod  go.sum
notifier/cmd/server/: main.go  wire.go  wire_gen.go
notifier/domain/app/: app.go
notifier/domain/broker/: listener_repository.go  publisher_repository.go
notifier/domain/listener/: listener_repository.go
notifier/infrastructure/app/: app.go  settings.go
notifier/infrastructure/rabbit/: listener.go  publisher.go
notifier/infrastructure/reminders/: reminders_repository.go  settings.go
notifier/pkgs/emails/: auth.go  email_service.go  settings.go
notifier/pkgs/logger/: settings.go
web-site/: config.toml
web-site/content/en/: _index.html
(+103 files in other folders)
