load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "wire.go",
    ],
    importpath = "github.com/evently/events-manager/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_wire//:go_default_library"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
