load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecases",
    srcs = [
        "create_event.go",
        "delete_event.go",
        "get_events.go",
    ],
    importpath = "github.com/evently/events-manager/domain/usecases",
    visibility = ["//visibility:public"],
)
