load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
        "settings.go",
    ],
    importpath = "github.com/evently/events-manager/infrastructure/app",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)
