load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "settings",
    srcs = ["settings.go"],
    importpath = "github.com/evently/events-manager/components/events/settings",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kelseyhightower_envconfig//:go_default_library"],
)
