load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapters",
    srcs = ["postgre.go"],
    importpath = "github.com/evently/events-manager/infrastructure/postgre_db/adapters",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lib_pq//:go_default_library"],
)
