load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "health",
    srcs = [
        "dtos.go",
        "handlers.go",
        "routes.go",
    ],
    importpath = "github.com/evently/events-manager/infrastructure/http/handlers/health",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)
